<resources>
    <string name="app_name">classtest</string>
    <string name="name">NAME</string>
    <string name="DCA">DCA</string>
    <string name="MARS">MARS</string>
    <string name="one_way">One Way</string>
    <string name="i_traveller">I Traveller</string>
    <string name="space">Space Station</string>
    <string name="flights">Flights</string>
    <string name="rovers">Rovers</string>
    <string name="oneway">One Way\n</string>
    <string name="itraveller">I Traveller\n</string>
    <string name="fight">Flights</string>
    <string name="Rovers">Rovers</string>
</resources>