<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DCA"
        android:id="@+id/dca"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/tvcenter"
        android:textSize="30sp"
        android:background="@color/green"
        android:layout_marginEnd="-25dp"
        android:padding="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MARS"
        android:id="@+id/mars"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/tvcenter"
        android:textSize="30sp"
        android:background="@color/green"
        android:layout_marginStart="-20dp"
        android:padding="30dp"
        android:paddingEnd="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:background="@color/white"
        android:textSize="30sp"
        android:layout_centerInParent="true"
        android:id="@+id/tvcenter"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space"
        android:id="@+id/space"
        android:background="@color/orange"
        android:layout_above="@id/dca"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="32dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flights"
        android:id="@+id/Flights"
        android:background="@color/orange"
        android:layout_toEndOf="@id/space"
        android:layout_alignBaseline="@id/space"
        android:layout_marginStart="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rovers"
        android:id="@+id/Rovers"
        android:background="@color/orange"
        android:layout_toEndOf="@id/Flights"
        android:layout_alignBaseline="@id/Flights"
        android:layout_marginStart="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_way"
        android:id="@+id/oneway"
        android:background="@color/orange"
        android:layout_below="@id/dca"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="80dp"
        android:textSize="20sp"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/oneway"
        android:layout_alignBaseline="@id/oneway"
        android:background="@color/orange"
        android:textSize="20sp"
        android:layout_marginLeft="-45dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_traveller"
        android:id="@+id/traveller"
        android:background="@color/orange"
        android:layout_below="@id/oneway"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp"/>

</RelativeLayout>